test/langtools/tools/javac/switchextra/SwitchObject.out
SwitchObject.java:8:16: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Object, int)
1 error
